@@ -14,5 +14,7 @@
    that the number of variables/constraints do not exceed maxint.
 8. Do not take the value of rhoend into consideration when correcting the incorrect (non-positive,
    not finite, etc) value of rhobeg for BOBYQA.
+9. Check that chist is nonnegative.
+10. If fhist contain any value blow -hugefun, raise the warning 'HugeNegativeF'.
 
 Check other changes by comparing the matlab interfaces (vimdiff).
